--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api/app.js",  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "dev": "nodemon api/app.js", 
+    "start": "node api/app.js"    
   },
   "keywords": [],
   "author": "",
@@ -19,5 +19,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
