--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "api/app.js",  
+  "main": "app.js",  
   "scripts": {
-    "dev": "nodemon api/app.js", 
-    "start": "node api/app.js"    
+    "start": "node app.js"    
   },
   "keywords": [],
   "author": "",
