--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",  
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js"    
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
