Refactor cookie handling and improve logout functionality; update CORS origins and enhance user authentication flow. Clean up code formatting and add logging for debugging purposes.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,7 @@ node_modulas
 # macOS specific file
 *.log
 # Ignore log files
-*.env
+# *.env
 # Ignore environment variable files
 *.tmp
 # Ignore temporary files
