--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,6 +23,13 @@ node_modulas
 # Ignore Sublime Text workspace files
 *.sublime-project
 # Ignore Sublime Text project files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# Ignore environment variable files
+
 
 
 # Ignore IDE specific files
